--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ footer {
     height: 50px;
     background: #007bff;
     color: white;
-    position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0;
 }
