--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,15 @@ footer {
   min-height: 50px;
   background: PapayaWhip;
 }
+
+
+/* The article fills all the space between header & footer */
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
